fixed responsiveness on small-devices

--- a/src/components/layout/navbar/style.module.css
+++ b/src/components/layout/navbar/style.module.css
@@ -5,7 +5,7 @@
 }
 
 .main_navigation{
-    overflow: auto;
+    overflow: hidden;
 }
 @media (max-width: 300px){
 .navlinks span{
